<resources>
    <string name="app_name">Pandora</string>

    <string name="hall_title">Discover</string>
    <string name="search_title">Search</string>
    <string name="library_title">Library</string>
    <string name="me_title">Me</string>

    <string name="title_new">New</string>
    <string name="title_hot">Hot</string>
    <string name="title_albums">Albums</string>
    <string name="title_more">More</string>
    <string name="title_song_count">Play all（%1$d）</string>
    <string name="title_genres">Genres</string>

    <string name="genres_us">US-EURO</string>
    <string name="genres_japan">JAPAN</string>
    <string name="genres_ACG">ACG</string>
    <string name="genres_driving">DRIVING</string>
    <string name="genres_quiet">QUIET</string>
    <string name="genres_running">RUNNING</string>


    <string name="lrc_nothing">Nothing</string>
    <string name="tv_cancel">cancel</string>
    <string name="title_trending">Trending</string>
    <string name="title_history">History</string>

    <string name="title_recent">Recently Played</string>
    <string name="title_my_favorite">My Favorite</string>
    <string name="title_local_music">Local Music</string>
    <string name="title_favorite_music">Favorite Music</string>
    <string name="title_favorite_album">Favorite Album</string>

    <string name="text_please_rate">Please rate the app</string>
    <string name="text_sure">Ensure</string>
    <string name="text_cancel">Cancel</string>



    <string name="from_us" translatable="false">167</string>
    <string name="from_japan" translatable="false">169</string>
    <string name="from_ACG" translatable="false">39</string>
    <string name="from_running" translatable="false">99</string>
    <string name="from_quiet" translatable="false">15</string>
    <string name="from_driving" translatable="false">85</string>


    <string name="me_recent"></string>
    <string name="playing_list">Play List</string>
    <string name="down_load">Download</string>
    <string name="play_next">Play Next</string>
    <string name="play_later">Play Later</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="operate_delete">Delete</string>
    <string name="please_check_net">Please check the network !</string>
    <string name="can_not_download">Unable to provide download !</string>
    <string name="can_not_play">Unable to play this track !</string>

    <string name="btn_cancle">Cancel</string>
    <string name="play_list_title">PlayList</string>
    <string name="add_play_list">Create PlayList</string>
    <string name="add_to_play_list">Add to PlayList</string>
    <string name="add_play_list_hint">playlist name</string>
    <string name="add_play_list_empty_tip">Please input playlist name</string>
    <string name="play_list_song_count">%1$d song</string>
    <string name="search_type_song">Songs</string>
    <string name="search_type_singer">Artist</string>
    <string name="action_share">share</string>
    <string name="action_share_title">Share with you online music:</string>
    <string name="edit_play_list_name">Edit playlist name</string>
    <string name="play_list_delete_tip">Sure to delete the selected playlist?</string>

</resources>
