<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            >

            <internet.com.larkmusic.view.MyTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="32dp"
                android:text="@string/library_title"
                android:textColor="#fffe3939"
                android:textSize="28sp"
                android:textStyle="bold"
                />

            <internet.com.larkmusic.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/title_genres"
                android:textColor="@color/text_15"
                android:textSize="20sp"
                />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:scrollbars="none"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <internet.com.larkmusic.view.GenreView
                            android:id="@+id/topUS"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            app:from="@string/from_us"
                            app:name="@string/genres_us"
                            app:src="@mipmap/ic_us"
                            >

                        </internet.com.larkmusic.view.GenreView>

                        <internet.com.larkmusic.view.GenreView
                            android:id="@+id/topJapan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            app:from="@string/from_japan"
                            app:name="@string/genres_japan"
                            app:src="@mipmap/ic_japan"
                            >

                        </internet.com.larkmusic.view.GenreView>

                        <internet.com.larkmusic.view.GenreView
                            android:id="@+id/topPop"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            android:layout_marginRight="20dp"
                            app:from="@string/from_ACG"
                            app:name="@string/genres_ACG"
                            app:src="@mipmap/ic_acg"
                            >

                        </internet.com.larkmusic.view.GenreView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal"

                        >

                        <internet.com.larkmusic.view.GenreView
                            android:id="@+id/topRock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            app:from="@string/from_driving"
                            app:name="@string/genres_driving"
                            app:src="@mipmap/ic_driving"
                            >

                        </internet.com.larkmusic.view.GenreView>

                        <internet.com.larkmusic.view.GenreView
                            android:id="@+id/topElectronic"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            app:from="@string/from_quiet"
                            app:name="@string/genres_quiet"
                            app:src="@mipmap/ic_electronic"
                            >

                        </internet.com.larkmusic.view.GenreView>

                        <internet.com.larkmusic.view.GenreView
                            android:id="@+id/topCountry"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="13dp"
                            android:layout_marginRight="20dp"
                            app:from="@string/from_running"
                            app:name="@string/genres_running"
                            app:src="@mipmap/ic_running"
                            >

                        </internet.com.larkmusic.view.GenreView>

                    </LinearLayout>
                </LinearLayout>
            </HorizontalScrollView>

            <internet.com.larkmusic.view.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/title_genres"
                android:textColor="@color/text_15"
                android:textSize="20sp"
                />

            <internet.com.larkmusic.view.GenreListItemView
                android:id="@+id/b_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:from="@string/from_us"
                app:name="@string/genres_us"
                app:src="@mipmap/ic_us"
                >

            </internet.com.larkmusic.view.GenreListItemView>

            <internet.com.larkmusic.view.GenreListItemView
                android:id="@+id/b_japan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:from="@string/from_japan"
                app:name="@string/genres_japan"
                app:src="@mipmap/ic_japan"
                >

            </internet.com.larkmusic.view.GenreListItemView>

            <internet.com.larkmusic.view.GenreListItemView
                android:id="@+id/b_pop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:from="@string/from_ACG"
                app:name="@string/genres_ACG"
                app:src="@mipmap/ic_acg"
                >

            </internet.com.larkmusic.view.GenreListItemView>

            <internet.com.larkmusic.view.GenreListItemView
                android:id="@+id/b_rock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:from="@string/from_driving"
                app:name="@string/genres_driving"
                app:src="@mipmap/ic_driving"
                >

            </internet.com.larkmusic.view.GenreListItemView>

            <internet.com.larkmusic.view.GenreListItemView
                android:id="@+id/b_electronic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:from="@string/from_quiet"
                app:name="@string/genres_quiet"
                app:src="@mipmap/ic_electronic"
                >

            </internet.com.larkmusic.view.GenreListItemView>

            <internet.com.larkmusic.view.GenreListItemView
                android:id="@+id/b_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                app:from="@string/from_running"
                app:name="@string/genres_running"
                app:src="@mipmap/ic_running"
                >

            </internet.com.larkmusic.view.GenreListItemView>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></FrameLayout>
</FrameLayout>