<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/operate_dlg_bg"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        >

        <com.itheima.roundedimageview.RoundedImageView
            android:id="@+id/iv_singer"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@mipmap/ic_song_default"
            android:scaleType="centerCrop"
            app:riv_border_color="#333333"
            app:riv_border_width="0dip"
            app:riv_corner_radius="3dp"
            app:riv_oval="false"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_song"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="With you"
                android:textColor="#ff666666"
                android:textSize="14sp"
                />

            <TextView
                android:id="@+id/tv_singer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="Towes"
                android:textColor="#ff999999"
                android:textSize="12sp"
                />
        </LinearLayout>
    </LinearLayout>


    <internet.com.larkmusic.view.MyTextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_play_next"
        android:drawablePadding="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/play_next"
        android:textColor="#ff666666"
        android:textSize="14sp"

        />

    <internet.com.larkmusic.view.MyTextView
        android:id="@+id/tv_later"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_play_later"
        android:drawablePadding="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/play_later"
        android:textColor="#ff666666"
        android:textSize="14sp"

        />

    <internet.com.larkmusic.view.MyTextView
        android:id="@+id/tv_add_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_add_to_play"
        android:drawablePadding="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/add_to_favorite"
        android:textColor="#ff666666"
        android:textSize="14sp"

        />

    <internet.com.larkmusic.view.MyTextView
        android:id="@+id/tv_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_download"
        android:drawablePadding="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/down_load"
        android:textColor="#ff666666"
        android:textSize="14sp"

        />

    <internet.com.larkmusic.view.MyTextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_delete"
        android:drawablePadding="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/operate_delete"
        android:textColor="#ff666666"
        android:textSize="14sp"
        android:visibility="gone"

        />

    <internet.com.larkmusic.view.MyTextView
        android:id="@+id/tv_playlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_playlist"
        android:drawablePadding="15dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/add_to_play_list"
        android:textColor="#ff666666"
        android:textSize="14sp"
        />

    <internet.com.larkmusic.view.MyTextView
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/tv_close"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/operate_dlg_cancel_btn_bg"
        android:gravity="center"
        android:text="@string/btn_cancle"
        android:textColor="#ff999999"
        android:textSize="16sp"
        />

</LinearLayout>